July 2, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cdriso.c: Fixed subchannel data handling with images ripped
   with cdrdao. Removed support for AcetoneISO. Parse .cue file as .toc file
   when needed to satisfy some stupid tutorials which tell users to use cdrdao
   to rip a "bin/cue" image which is in fact a "bin/toc" image.

July 2, 2010 edgbla <edgbla@yandex.ru>

 * po/ru_RU.po: Updated.
 
July 1, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cdriso.c: Added support for images ripped with cdrdao with
   "--read-subchan rw_raw" for subchannel data.
 * po/pcsx.pot, po/*.po: Updated.

Jun 30, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/PcsxController.m: Default dynarec to off until it's actually working
   for Mac OS X :(

Jun 29, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * win32/gui/plugin.c: Close PAD plugins before other plugins and don't check
   return value for PADclose(), which should fix issues with LilyPad.
 * plugins/dfxvideo/gpu.c: Added 'fake gpu busy' hack and GPUsetFix() API
   from P.E.Op.S Soft GPU 1.18.
 * plugins/dfxvideo/externals.h: Likewise.
 * plugins/dfxvideo/prim.c: Likewise.
 * plugins/dfxvideo/gpucfg-0.1df/main.c: Likewise.
 * plugins/dfxvideo/gpucfg-0.1df/dfxvideo.glade2: Likewise.
 * macosx/plugins/DFXVideo/English.lproj/NetSfPeopsSoftGPUConfig.nib/classes.nib:
   Likewise.
 * macosx/plugins/DFXVideo/English.lproj/NetSfPeopsSoftGPUConfig.nib/keyedobjects.nib:
   Likewise.
 * po/pcsx.pot, po/*.po: Updated.

Jun 26, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/psxbios.c: Fixed bcopy() (FF9 battle crash with HLE BIOS - my
   mistake :( ).
 * libpcsxcore/misc.c: Added check for HLE BIOS in savestate, bumped savestate
   version, don't byteswap savestate version as part of savestate data is not
   endianness clean.

Jun 24, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/spu.c: Reset lastch to -1 in SPUinit().