@@ -41,7 +41,7 @@ u8 psxHwRead8(u32 add) {
 
 	switch (add) {
 		case 0x1f801040: hard = sioRead8();break; 
-      //  case 0x1f801050: hard = serial_read8(); break;//for use of serial port ignore for now
+        case 0x1f801050: hard = SIO1_readData8(); break;
 		case 0x1f801800: hard = cdrRead0(); break;
 		case 0x1f801801: hard = cdrRead1(); break;
 		case 0x1f801802: hard = cdrRead2(); break;
@@ -104,13 +104,18 @@ u16 psxHwRead16(u32 add) {
 			PAD_LOG("sio read16 %x; ret = %x\n", add&0xf, hard);
 #endif
 			return hard;
-
-		//Serial port stuff not support now ;P
-	 // case 0x1f801050: hard = serial_read16(); break;
-	 //	case 0x1f801054: hard = serial_status_read(); break;
-	 //	case 0x1f80105a: hard = serial_control_read(); break;
-	 //	case 0x1f80105e: hard = serial_baud_read(); break;
-
+	    case 0x1f801050:
+            hard = SIO1_readData16();
+            return hard;
+	  	case 0x1f801054:
+            hard = SIO1_readStat16();
+            return hard;
+	 	case 0x1f80105a:
+            hard = SIO1_readCtrl16();
+            return hard;
+	 	case 0x1f80105e:
+            hard = SIO1_readBaud16();
+            return hard;
 		case 0x1f801100:
 			hard = psxRcntRcount(0);
 #ifdef PSXHW_LOG
@@ -200,8 +205,9 @@ u32 psxHwRead32(u32 add) {
 			PAD_LOG("sio read32 ;ret = %x\n", hard);
 #endif
 			return hard;
-			
-	//	case 0x1f801050: hard = serial_read32(); break;//serial port
+		case 0x1f801050:
+            hard = SIO1_readData32();
+            return hard;
 #ifdef PSXHW_LOG
 		case 0x1f801060:
 			PSXHW_LOG("RAM size read %x\n", psxHu32(0x1060));
@@ -337,7 +343,7 @@ u32 psxHwRead32(u32 add) {
 void psxHwWrite8(u32 add, u8 value) {
 	switch (add) {
 		case 0x1f801040: sioWrite8(value); break;
-	//	case 0x1f801050: serial_write8(value); break;//serial port
+		case 0x1f801050: SIO1_writeData8(value); break;
 		case 0x1f801800: cdrWrite0(value); break;
 		case 0x1f801801: cdrWrite1(value); break;
 		case 0x1f801802: cdrWrite2(value); break;
@@ -389,13 +395,18 @@ void psxHwWrite16(u32 add, u16 value) {
 			PAD_LOG ("sio write16 %x, %x\n", add&0xf, value);
 #endif
 			return;
-
-		//serial port ;P
-	//  case 0x1f801050: serial_write16(value); break;
-	//	case 0x1f80105a: serial_control_write(value);break;
-	//	case 0x1f80105e: serial_baud_write(value); break;
-	//	case 0x1f801054: serial_status_write(value); break;
-
+	    case 0x1f801050:
+            SIO1_writeData16(value);
+            return;
+        case 0x1f801054:
+            SIO1_writeStat16(value);
+            return;
+		case 0x1f80105a:
+            SIO1_writeCtrl16(value);
+            return;
+		case 0x1f80105e:
+            SIO1_writeBaud16(value);
+            return;
 		case 0x1f801070: 
 #ifdef PSXHW_LOG
 			PSXHW_LOG("IREG 16bit write %x\n", value);
@@ -497,7 +508,9 @@ void psxHwWrite32(u32 add, u32 value) {
 			PAD_LOG("sio write32 %x\n", value);
 #endif
 			return;
-	//	case 0x1f801050: serial_write32(value); break;//serial port
+		case 0x1f801050:
+            SIO1_writeData32(value);
+            return;
 #ifdef PSXHW_LOG
 		case 0x1f801060:
 			PSXHW_LOG("RAM size write %x\n", value);
